--- a/index.html
+++ b/index.html
@@ -1,57 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <h1>Task Manager</h1>
+      <h1>Task Manager</h1>
     </header>
 
     <main>
-        <section id="task-form-Section">
-            <h2>Add New Task</h2>
-            
-            <form id="task-form">
-                <div>
-                    <label for="task-name">Task Name:</label>
-                    <input type="text" name="taskName" id="task-name" required>
-                </div>
-                <div>
-                    <label for="task-category">Category</label>
-                    <select name="taskCategory" id="task-category">
-                        <option value="Work">work</option>
-                        <option value="Personal">Personal</option>
-                        <option value="Urgent">Urgent</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="task-deadline">Task Name:</label>
-                    <input type="date" name="taskDeadline" id="task-deadline">
-                </div>
-                <button type="submit">Add Task</button>
-            </form>
-        </section>
+      <section id="task-form-Section">
+        <h2>Add New Task</h2>
 
-        <section id="task-list-section">
-            <h2>Task List</h2>
+        <form id="task-form">
+          <div>
+            <label for="task-name">Task Name:</label>
+            <input type="text" name="taskName" id="task-name" required />
+          </div>
+          <div>
+            <label for="task-category">Category:</label>
+            <select name="taskCategory" id="task-category">
+              <option value="Work">work</option>
+              <option value="Personal">Personal</option>
+              <option value="Urgent">Urgent</option>
+            </select>
+          </div>
+          <div>
+            <label for="task-deadline">Deadline:</label>
+            <input type="date" name="taskDeadline" id="task-deadline" />
+          </div>
+          <button type="submit">Add Task</button>
+        </form>
+      </section>
 
-            <div id="search-filter">
-                <input type="text" id="search-bar" placeholder="Search By Task Name">
-                <select id="filter-category">
-                    <option value="All">All Categories</option>
-                    <option value="Work">work</option>
-                    <option value="Personal">Personal</option>
-                    <option value="Urgent">Urgent</option>
-                </select>
-            </div>
-            <ul id="task-list"></ul>
-        </section>
+      <section id="task-list-section">
+        <h2>Task List</h2>
+
+        <div id="search-filter">
+          <input
+            type="text"
+            id="search-bar"
+            placeholder="Search By Task Name"
+          />
+          <select id="filter-category">
+            <option value="All">All Categories</option>
+            <option value="Work">work</option>
+            <option value="Personal">Personal</option>
+            <option value="Urgent">Urgent</option>
+            <!-- why only three are showing -->
+          </select>
+        </div>
+        <ul id="task-list"></ul>
+      </section>
     </main>
     <!-- -------------------------------------- -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
